@@ -1,5 +1,7 @@
 '''
 Created on May 06, 2012
+Last change on Oct 25, 2012
+v0.0.2
 
 @author: mindrunner
 '''
@@ -9,11 +11,12 @@ import xbmcgui
 import xbmcaddon
 
 if __name__ == '__main__':
-    
     addon_id = "service.partymode.autostart"
     Addon = xbmcaddon.Addon(addon_id)
-    __is_enabled__ = Addon.getSetting('enable')
-    
-    if __is_enabled__:
-    	xbmc.executebuiltin("XBMC.PlayerControl(PartyMode)")
+    if Addon.getSetting('enable'):
+        sleep(Addon.getSetting('delay'))
+        xbmc.executebuiltin("XBMC.PlayerControl(PartyMode)")
+        if Addon.getSetting('fullscreen'):
+            sleep(20)
+            xbmc.executebuiltin("XBMC.ActivateWindow(visualisation)")
 
