@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.partymode.autostart" name="Partymode Autostart" version="0.0.1" provider-name="mindrunner">
+<addon id="service.partymode.autostart" name="Partymode Autostart" version="0.0.2" provider-name="mindrunner">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
 	</requires>
