@@ -2,4 +2,6 @@
 <strings>
 <!-- Options -->
 	<string id="30000">Activate service</string>
+	<string id="30001">Activate fullscreen/virtualization</string>
+	<string id="30002">Startup delay</string>
 </strings>
