@@ -2,4 +2,6 @@
 <strings>
 <!-- Options -->
 	<string id="30000">Dienst aktivieren</string>
+	<string id="30001">Vollbild/Virtualisation</string>
+	<string id="30002">Startverzögerung</string>
 </strings>
