@@ -2,5 +2,7 @@
 <settings>		
 	<category label="Main">
 		<setting id="enable" type="bool" label="30000" default="true"/>
+		<setting id="fullscreen" type="bool" label="30001" default="true"/>
+		<setting id="delay" type="int" label="30002" default="2"/>
 	</category>
 </settings>
