@@ -1,2 +1,4 @@
+[B]Version 0.0.2[/B]
+- added fullscreen and startup delay options (thanks to dreamkp)
 [B]Version 0.0.1[/B]
 - beta version
